# object_detection_tvm_runtime

./: CMakeLists.txt  README.md  face_analysis.cxx  face_analysis.h  face_analysis_config.h.in  tvm_runtime_pack.cc
face_age_gender/: CMakeLists.txt
face_detection/: CMakeLists.txt  face_detection.cxx  face_detection.h
face_dizziness/: CMakeLists.txt
face_emotion/: CMakeLists.txt
face_landmark/: CMakeLists.txt
face_race_ethnicity/: CMakeLists.txt
face_recognition/: CMakeLists.txt
face_segmentation/: CMakeLists.txt
